update sdk version 1.4.2